cluster/manifests/tempo/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
  labels:
    name: tempo
    pod-security.kubernetes.io/enforce: restricted
