cluster/manifests/tempo/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-mc
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: mc
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
  - captureMode: DEFAULT
    hosts:
    - ./tempo-minio.tempo.svc.cluster.local
    - istio-system/istiod.istio-system.svc.cluster.local
    - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-distributor
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: distributor
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-querier
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: querier
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-query-frontend
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: query-frontend
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./tempo-minio.tempo.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-compactor
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: compactor
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-ingester
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: ingester
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: tempo-metrics-generator
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: metrics-generator
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - mimir/mimir-distributor.mimir.svc.cluster.local
