cluster/manifests/tempo/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: tempo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-distributor
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: distributor
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: otel
          podSelector:
            matchLabels:
              app.kubernetes.io/name: otel-collector
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 4317
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-query-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: query-frontend
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 3100
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: minio
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: tempo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
        - namespaceSelector:
            matchLabels:
              name: tempo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
              app.kubernetes.io/component: mc
      ports:
        - protocol: TCP
          port: 9000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-mcrouter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tempo
      app.kubernetes.io/component: mcrouter
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: tempo
          podSelector:
            matchLabels:
              app.kubernetes.io/name: tempo
      ports:
        - protocol: TCP
          port: 5000
